vetter-core/tests/corpus/curl/snapshots/basic_auth_flag.snap
---
source: vetter-core/tests/curl_corpus.rs
expression: parsed
---
{
  "command": "curl",
  "argv": [
    "curl",
    "--user",
    "alice:secret",
    "https://example.test/protected"
  ],
  "effects": [
    {
      "kind": "http_request",
      "method": "GET",
      "url": "https://example.test/protected",
      "headers": [],
      "body": {
        "kind": "none"
      },
      "auth": {
        "kind": "basic",
        "user": "alice",
        "password_redacted": true
      },
      "tls": "strict",
      "follow_redirects": false
    }
  ],
  "signals": [],
  "display_hints": {
    "primary_verb": "GET",
    "primary_target": "https://example.test/protected",
    "badges": []
  }
}
