vetter-core/tests/corpus/curl/snapshots/cookie_file.snap
---
source: vetter-core/tests/curl_corpus.rs
expression: parsed
---
{
  "command": "curl",
  "argv": [
    "curl",
    "-b",
    "@./cookies.txt",
    "https://api.example.test/me"
  ],
  "effects": [
    {
      "kind": "http_request",
      "method": "GET",
      "url": "https://api.example.test/me",
      "headers": [],
      "body": {
        "kind": "none"
      },
      "tls": "strict",
      "follow_redirects": false
    },
    {
      "kind": "file_read",
      "path": "./cookies.txt"
    }
  ],
  "signals": [],
  "display_hints": {
    "primary_verb": "GET",
    "primary_target": "https://api.example.test/me",
    "badges": []
  }
}
